<resources>
    <string name="app_name">갤러리</string>
    <string name="act_reg">사진 등록</string>
    <string name="act_list">사진 목록</string>
    <string name="act_item">사진 정보</string>

    <string name="action_home">홈</string>
    <string name="action_reg">사진 등록</string>
    <string name="action_list">사진 목록</string>
    <string name="action_delete">사진 삭제</string>

    <string name="title">제목</string>
    <string name="orientation">방향</string>
    <string name="background">배경</string>
    <string name="photo">사진</string>
</resources>
