<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.contentsmgt.MainActivity">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_list"
        android:orderInCategory="100"
        android:title="@string/action_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reg"
        android:orderInCategory="100"
        android:title="@string/action_reg"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
