<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="70dp" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:text="@string/title" />
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >
        <TextView
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:text="@string/orientation" />
        <TextView
            android:id="@+id/orientation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >
        <TextView
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:text="@string/background" />
        <TextView
            android:id="@+id/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >
        <TextView
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:text="@string/photo" />
        <ImageView
            android:id="@+id/photo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />
    </LinearLayout>

</LinearLayout>