<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="70dp" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:text="@string/title" />
        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:text="@string/orientation" />
        <RadioGroup
            android:id="@+id/orientation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <RadioButton
                android:id="@+id/landscape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="가로" />
            <RadioButton
                android:id="@+id/portrait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="세로" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:text="@string/background" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <CheckBox
                android:id="@+id/background1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="인물" />
            <CheckBox
                android:id="@+id/background2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="자연" />
            <CheckBox
                android:id="@+id/background3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="건물" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:text="@string/photo" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/tv_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff0000"
                android:text="등록할 사진을 보려면 클릭하세요!"
                android:clickable="true"
                android:onClick="selectPhoto" />
            <ImageView
                android:id="@+id/photo"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="등록"
            android:onClick="register" />
    </LinearLayout>
</LinearLayout>